--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Digital Twin SDK
-description: A starter template for a Jeykll site using the Just the Docs theme!
+description: The Digital Twins SDK is a comprehensive toolset designed to enable developers to create, manage, and interact with digital twin instances effectively.
 theme: just-the-docs
 
 url: https://digitaltwinsdk.com/
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/DigitalBotLab/digital-twin-sdk-code
