--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ url: https://digitaltwinsdk.com/
 
 aux_links:
   SDK Repository: https://github.com/DigitalBotLab/digital-twin-sdk-code
+
+favicon_ico: "/favicon/favicon.ico"
+
