--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ url: https://digitaltwinsdk.com/
 
 aux_links:
   SDK Repository: https://github.com/DigitalBotLab/digital-twin-sdk-code
+  Digital Twin Starter: https://DigitalTwinStarter.com
+
 
 favicon_ico: "/favicon/favicon.ico"
 
@@ -52,7 +54,7 @@ heading_anchors: true
 # appears at the bottom of every page's main content
 # Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust
 markup / liquid-based content.
-footer_content: "Copyright &copy; 2023 Digital Bot Lab, Inc. Distributed by an <a href=\"https://github.com/DigitalBotLab/digital-twin-sdk/tree/main/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 2023 <a href=\"https://digitalbotlab.com\">Digital Bot Lab, Inc.</a> Distributed by an <a href=\"https://github.com/DigitalBotLab/digital-twin-sdk/tree/main/LICENSE.txt\">MIT license.</a>"
 
 # Color scheme supports "light" (default) and "dark"
 color_scheme: dark
