--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,7 @@ heading_anchors: true
 
 # Footer content
 # appears at the bottom of every page's main content
-# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust
-markup / liquid-based content.
+# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
 footer_content: "Copyright &copy; 2023 <a href=\"https://digitalbotlab.com\">Digital Bot Lab, Inc.</a> Distributed by an <a href=\"https://github.com/DigitalBotLab/digital-twin-sdk/tree/main/LICENSE.txt\">MIT license.</a>"
 
 # Color scheme supports "light" (default) and "dark"
