--- a/_config.yml
+++ b/_config.yml
@@ -59,3 +59,8 @@ footer_content: "Copyright &copy; 2023 <a href=\"https://digitalbotlab.com\">Dig
 
 # Color scheme supports "light" (default) and "dark"
 color_scheme: dark
+
+# Google Analytics Tracking (optional)
+# Supports a CSV of tracking ID strings (eg. "UA-1234567-89,G-1AB234CDE5")
+ga_tracking: G-HQCYQY2FH9
+ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
